# computer_vision_samples

./: .gitignore  README.md  requirements.txt
cpp/PCLCluster/: CMakeLists.txt  PCLCluster.cpp
cpp/PointCloudVisualizerXYZRGB_filter/: CMakeLists.txt  defines.hpp
cpp/capture_projects/: Readme.txt
cpp/capture_projects/OpenCVZEDGrabber/: CMakeLists.txt  README.txt
cpp/capture_projects/OpenCVZEDGrabber/src/: main.cpp
cpp/capture_projects/PCLKinect2BufferGrabber/: CMakeLists.txt  Sample.cpp
cpp/capture_projects/PCLKinect2TimestampGrabber/: Sample.cpp
cpp/capture_projects/PCLRealSenseGrabber/: CMakeLists.txt
cpp/capture_projects/PCLRealSenseGrabber/include/: real_sense_grabber.h
cpp/capture_projects/PCLRealSenseGrabber/src/: real_sense_grabber.cpp  real_sense_viewer.cpp
cpp/data_prep/: README.txt  auto_script.py
cpp/data_prep/annotation_prep/: CMakeLists.txt  README.txt  annotation_prep.cpp
cpp/data_prep/filter_point_cloud/: CMakeLists.txt  filter_point_cloud.cpp
cpp/data_prep/label_point_cloud/: CMakeLists.txt  label_point_cloud.cpp
cpp/data_prep/rotate_point_cloud/: CMakeLists.txt  rotate_point_cloud.cpp
cpp/opencv_project/: CMakeLists.txt  main.cpp
cpp/opencv_project/Dense optical flow/: main.cpp
cpp/opencv_project/Lukas-Kanade optical flow(point)/: main.cpp
cpp/pcl_projects/PCLVisualizer/: CMakeLists.txt
cpp/pcl_projects/PointCloudVisualizerXYZRGB_filter/: PCLSimpleVisualizer_filter.cpp
cpp/pcl_projects/PointCloudVisualizerXYZRGB_filter/src/: filters.hpp
cpp/pcl_projects/find_edges/: CMakeLists.txt  find_edges.cpp
cpp/pcl_projects/find_plane/: CMakeLists.txt  find_plane.cpp
cpp/pcl_projects/gpu_segmentation/: CMakeLists.txt  segmentation.cpp
cpp/pcl_projects/pcl_methods_playground/: CMakeLists.txt  PCLSegmentMulti.cpp
cpp/pcl_projects/pcl_methods_playground/src/: PCLSegmentMulti.cpp  defines.hpp
cpp/pcl_projects/pcl_methods_playground/src/Filters/: PassThrough.cpp  PassThrough.hpp  Smoothing.cpp  Smoothing.hpp
cpp/pcl_projects/pcl_methods_playground/src/Presentation/: Cleanup.cpp  Cleanup.hpp  Graphics.cpp  Graphics.hpp  Normals.cpp  Normals.hpp  PrincipalCurves.cpp  PrincipalCurves.hpp  Settings.cpp  Settings.hpp
cpp/pcl_projects/pcl_methods_playground/src/Presentation/ColorCoding/: DepthCoding.cpp  DepthCoding.hpp  NormalCoding.cpp  NormalCoding.hpp
cpp/pcl_projects/pcl_methods_playground/src/Registration/: ICP.cpp  ICP.hpp  NDT.cpp  NDT.hpp
cpp/pcl_projects/pcl_methods_playground/src/Segmentation/: CPC.cpp  CPC.hpp  CRGS.cpp  CRGS.hpp  CustomRGS.cpp  CustomRGS.hpp  LCCP.cpp  LCCP.hpp  RGS.cpp  RGS.hpp  SVC.cpp  SVC.hpp
cpp/pcl_projects/pcl_methods_playground/src/conversion/: Conversion.cpp  Conversion.hpp  NormalMap.cpp  NormalMap.hpp
cpp/pcl_projects/pcl_methods_playground/src/filters/: filters.cpp  filters.hpp
cpp/pcl_projects/supervoxel_segmentation_playground/: CMakeLists.txt  PCLSuperVoxelSegmentation.cpp  defines.hpp
cpp/pcl_projects/supervoxel_segmentation_playground/src/: FeatureExtractor.cpp  FeatureExtractor.hpp  Graphics.cpp  Graphics.hpp  Normals.cpp  Normals.hpp  PrincipalCurves.cpp  PrincipalCurves.hpp  SVC.cpp  SVC.hpp  Settings.cpp  Settings.hpp  filters.cpp  json.hpp
cpp/template_project/: CMakeLists.txt  README.txt  main.cpp
guides/: macOS_setup.md  version_control.md
python/: image_histogram.py  read_video.py  thresholding.py  webcam.py
python/Dense optical flow/: main.py
python/feature_maps/: feature_maps_cv2.py  feature_maps_edge.py  feature_maps_filters.py  feature_maps_gabor.py  feature_maps_lbp.py  feature_maps_np.py  feature_maps_texture.py
